--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img class ="moviePic" src="https://up.yimg.com/ib/th?id=OIP.BMFFsuNilrLPO-QCaqiz6AHaHa&pid=Api&rs=1&c=1&qlt=95&w=106&h=106"/>
+	<p class="movieDetail">That, I believe, is really what "Oppenheimer" is about, much more so than the atom bomb itself, or even its impact on the war and the Japanese civilian population, which is talked about but never shown. The film does show what the atom bomb does to human flesh, but it's not recreations of the actual attacks on Japan: the agonized Oppenheimer imagines Americans going through it. This filmmaking decision is likely to antagonize both viewers who wanted a more direct reckoning with the destruction of Hiroshima and Nagasaki, and those who have bought into the arguments advanced by Strauss and others that the bombs had to be dropped because Japan never would have surrendered otherwise. The movie doesn't indicate whether it thinks that interpretation is true or if it sides more with Oppenheimer and others who insisted that Japan was on its knees by that point in World War II and would have eventually given up without atomic attacks that killed hundreds of thousands of civilians.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
